Resume height fix on tablet

--- a/www/static/less/bartola.less
+++ b/www/static/less/bartola.less
@@ -184,11 +184,6 @@ nav {
   min-height: 80vh;
   overflow-y: auto;
 
-  @media @small-desktop-down {
-    max-height: 500px;
-    min-height: 500px;
-  }
-
   @media @tablet-down {
     max-height: initial;
     min-height: initial;
